# BUAA_Lab

./: .gitignore  README.md
BaiduSuggestion/: BaiduSuggestion.py  Questions.txt.7z  README.md
BaiduWikiSynonym/: README.md  scrapy.cfg
BaiduWikiSynonym/NGproject/: items.py  middlewares.py  pipelines.py  settings.py
BaiduWikiSynonym/NGproject/spiders/: baidu.py
BaiduWikiSynonym/webview/: controller.py  model.py
BaiduWikiSynonym/webview/templates/: collection.html  collections.html  index.html  nav.html
CIBot/: DEPENDENCIES  README.md  STRUCTURE  manage.py
CIBot/CIBot/: settings.py  urls.py  wsgi.py
CIBot/app/: admin.py  apps.py  scheds.py  tests.py  urls.py  views.py
CIBot/app/models/: Answer.py  ImportFile.py  Keyword.py  Question.py  RtTask.py  RtUser.py  Tag.py  User.py  __init__.py
CIBot/doc/: CI-Bot概要设计说明书.pptx  CI-Bot软件需求规格说明书.docx  CI-Bot需求说明书.docx  CIBot概要设计说明书.pptx
CIBot/lib/: QA-Snake.7z  download_datasets.sh
CIBot/static/: app.js  jquery.js  w3.css
CIBot/templates/: index.html  log.html  test.html
InShort/: InShort.py  STRUCTURE  query.py  question.py
InShort/ref/: seg.txt
OpenKG_data/: parsePerson.py
QaBot/: QA-Snake.7z  README.md  init.sql  run.sh
QaBot/QaBot/: AI.py  bot.py  db.py  settings.py
ros_robotrc/: CMakeLists.txt  INSTALL  README.md  package.xml
ros_robotrc/programs/: Add.py  Mul.py
ros_robotrc/scripts/: Client.py  Server.py
ros_robotrc/srv/: DeviceDump.srv
ros_robotrc/ws/: debug.html  eventemitter2.min.js  exmaples.html  roslib.min.js  w3.css
tiebaspider/: isdigit.py  tiebaspider.py
(+10 files in other folders)
